--- a/style.css
+++ b/style.css
@@ -5,21 +5,6 @@ body {
     font-family: Lato, sans-serif;
 }
 
-.banner {
-    width: 500px;
-    margin: 0 auto;
-    display: block;
-    text-align: right;
-}
-
-.banner img {
-    width: 100%;
-}
-
-.banner .more_inf {
-    font-family: fantasy, cursive;
-}
-
 
 .centered-main-page-element {
     display: block;
@@ -65,6 +50,23 @@ button {
 button:hover {
     color: #3a3A3a;
 }
+
+/* banner */
+.banner {
+    width: 500px;
+    margin: 0 auto;
+    display: block;
+    text-align: right;
+}
+
+.banner img {
+    width: 100%;
+}
+
+.banner .more_inf {
+    font-family: fantasy, cursive;
+}
+
 
 /* Heading */
 h3,
