refactor: правило 3.4, убрал теговые селекторы из стилей. внёс соответствующие изменения в js

--- a/style.css
+++ b/style.css
@@ -26,17 +26,16 @@ ul {
   padding: 0px;
 }
 
-li,
-h3 {
+li {
   list-style: none;
 }
 
 input,
-button {
+.button {
   outline: none;
 }
 
-button {
+.button {
   background: none;
   border: 0px;
   color: #888;
@@ -46,7 +45,7 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.button:hover {
   color: #3a3A3a;
 }
 
@@ -68,7 +67,7 @@ button:hover {
 
 
 /* Heading */
-h3,
+.heading,
 label[for="new-task"] {
   color: #333;
   font-weight: 700;
@@ -107,7 +106,7 @@ input#new-task {
 }
 
 /* Task list */
-li {
+.no-edit-mode {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -117,52 +116,52 @@ li {
   align-items: center;
 }
 
-ul li>* {
+.no-edit-mode > * {
   vertical-align: middle;
 }
 
-li>input[type="checkbox"] {
+.no-edit-mode > input[type="checkbox"] {
   margin: 0 10px;
 }
 
-li>label {
+.no-edit-mode > label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li>input[type="text"] {
+.no-edit-mode > input[type="text"] {
   width: 226px
 }
 
-button.delete img {
+.button.delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.button.delete img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.no-edit-mode input[type=text] {
   display: none
 }
 
-ul li.edit-mode input[type=text] {
+.edit-mode input[type=text] {
   display: inline-block;
   width: 224px
 }
 
-ul li.edit-mode label {
+.edit-mode label {
   display: none;
 }
 
